[project]
name = "RuassianWordCloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deep-translator>=1.11.4",
    "jieba>=0.42.1",
    "matplotlib>=3.7.0",
    "nltk>=3.8.1",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pymorphy3>=1.2.0",
    "pymorphy3-dicts-ru>=2.4.417150.4580142",
    "python-docx>=0.8.11",
    "wordcloud>=1.9.2",
]
